[package]
name = "merge-source-map"
description = "Merge multiple sourcemaps"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/jiesia/merge-source-map"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcemap = "7.0.1"
